[package]
name = "lobster"
version = "0.7.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2021"
license = "ISC"

readme = "README.md"
description = "A fast limit order book (LOB)"
documentation = "https://docs.rs/lobster"
homepage = "https://github.com/rubik/lobster"
repository = "https://github.com/rubik/lobster"
keywords = ["orderbook", "order", "limit", "hft"]

[badges]
coveralls = { repository = "rubik/lobster" }
travis-ci = { repository = "rubik/lobster" }

[dependencies]
tikv-jemallocator = "0.5.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = "1.3.0"
serde = { version = "1.0.190", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "quantcup"
harness = false

[lib]
bench = false


